# backend/src/routes/filmRoutes.ts
@@ -1,16 +1,15 @@
 import { Router } from 'express';
-import { Film } from '../models';
+import * as movieController from '../movieController';
 
 const router = Router();
 
-router.get('/', async (req, res) => {
-    const films = await Film.findAll();
-    res.json(films);
-});
+// Routes pour récupérer tous les films et un film par ID
+router.get('/', movieController.getMovies);
+router.get('/:id', movieController.getMovieById);
 
-router.post('/', async (req, res) => {
-    const newFilm = await Film.create(req.body);
-    res.json(newFilm);
-});
+// Routes pour créer, mettre à jour et supprimer des films
+router.post('/', movieController.createMovie);
+router.put('/:id', movieController.updateMovie);
+router.delete('/:id', movieController.deleteMovie);
 
 export default router;
